--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
+astroid==1.4.8
 dj-database-url==0.4.1
 Django==1.10.2
+django-lint==2.0.4
 gunicorn==19.6.0
+isort==4.2.5
+lazy-object-proxy==1.2.2
+logilab-astng==0.24.3
+logilab-common==1.2.2
+mccabe==0.5.2
 psycopg2==2.6.2
+pylint==1.6.4
+pylint-django==0.7.2
+pylint-plugin-utils==0.2.4
+six==1.10.0
 whitenoise==3.2.2
+wrapt==1.10.8
