--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 dj-database-url==0.4.2
-Django==1.10.5
-gunicorn==19.6.0
-psycopg2==2.6.2
+Django==1.11
+gunicorn==19.7.1
+psycopg2==2.7.1
+pytz==2017.2
 whitenoise==3.3.0
